@@ -18,6 +18,8 @@
 11. In tag-editor, when onbtaining values to use for 'All Tracks' entry, don't
     ignore empty fields.
 12. When determining album year, ignore playlist files!
+13. If MPD database is refreshed whilst listview is not at top level, then
+    reset view to top level.
 
 1.3.3
 -----
